maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:43: error: type mismatch;
 found   : Unit
 required: Int
  if (Dirr==1){
  ^